--- a/style.css
+++ b/style.css
@@ -7,13 +7,9 @@
 
 body{
     background-color: var(--cor-de-fundo);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.container{
-    display: flex;
-    align-items: center;
 }
 
+h1{
+    background-color: white;
+}
 
