--- a/styles/header.css
+++ b/styles/header.css
@@ -11,11 +11,39 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 .container{
-    display:flex;
+    display: flex;
     align-items: center;
 }
 .container-imagem{
     padding: 1em;
+}
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+}
+.container-botao:checked ~ .lista-menu{
+    display: block;
+}
+.lista-menu-titulo,.lista-item{
+    padding: 1em;
+    background-color: var(--branco);
+}
+.lista-menu-titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+.lista-menu-link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+.container-botao{
+    display: none;
 }
