--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -29,7 +29,6 @@
 .botoes{
     display: flex;
 }
-
 .card{
     background: var(--branco);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -37,8 +36,30 @@
     margin: 1em;
     padding: 1em;
 }
-
 .descricao-titulo{
-    color:var(--laranja)
+    color: var(--laranja);
     font-weight: 700;
+}
+
+.descricao-titulo-livro{
+    color: var(--azul);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em o;
+}
+
+.descricao-texto{
+    font-size: 14px;
+}
+
+.botoes-item{
+    margin: 0 0.5em;
+}
+
+.botoes-ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
 }
