--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -40,22 +40,18 @@
     color: var(--laranja);
     font-weight: 700;
 }
-
 .descricao-titulo-livro{
     color: var(--azul);
     font-size: 18px;
     font-weight: 700;
-    margin: 0.5em o;
+    margin: 0.5em 0;
 }
-
 .descricao-texto{
     font-size: 14px;
 }
-
 .botoes-item{
     margin: 0 0.5em;
 }
-
 .botoes-ancora{
     background-color: var(--laranja);
     padding: 1em 2.2em;
